--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - notenrechner",
+            "request": "launch",
+            "mainClass": "notenrechner",
+            "projectName": "java_21fcc2a1"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - simpleCalc",
             "request": "launch",
             "mainClass": "simpleCalc",
